styles/style.css
/* Google fonts */
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:wght@100..900&display=swap');

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Inter;
}

html, body{
  background: rgb(20, 19, 19);
}
/* Shared styles */

.container{
  width: 90%;
  margin: 5rem auto;
}

.btn-btn{
  border-radius: 46px;
  background: #E6533C;
  padding: 8px 20px;
}

/* Navbar */

h3 i{
  font-size: 4rem;
  color: #E6533C;
}

.navbar{
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.nav-options ul{
  display: flex;
  gap: 3rem;
  justify-content: space-between;
  border: 1px solid rgba(255, 255, 255, 0.1);
  border-radius: 39px;
  padding: 12px 24px 12px 4px;
}

.nav-options > ul >li{
  list-style: none;
  cursor: pointer;
}

.nav-options>ul>li >a{
  text-decoration: none;
  color: #fff;
  font-size: 1rem;
}

#triple-bar{
  display: none;  
}

/* banner style */

.banner-section{
  background: linear-gradient(180.00deg, rgb(17, 17, 17), rgba(119, 119, 119, 0) 100%);
  border-radius: 8px;
}

.title-container{
  display: flex;
  gap: 90px;
  justify-content: space-around;
  align-items: center;
}

.text-container{
  width: 520px;
  height: 282px;
}

.text-title{
  font-size: 4.5rem;
  color: #fff;
  margin-bottom: 28px;
}

.shape{
  font-size: 5.5rem;
  font-family: "Dancing Script", cursive;
}

.title-description{
  font-size: 1rem;
  line-height: 24px;
  color: #FFFFFF80;
  margin-bottom: 28px;
}

.title-btn{
  background: #E6533C;
  border: none;
  color: #fff;
  font-weight: 600;
  padding: 16px 40px;
  border-radius: 42px;
}

.title-btn2{
  border: 1px solid rgb(255, 255, 255);
  color: #fff;
  border-radius: 42px;
  padding: 16px 40px;
  margin-left: 14px;
  font-weight: 600;
  background: rgb(20, 19, 19);
}

.image-container{
  position: relative;
}

.card1{
  position: absolute;
  top: 403px;
  left: -43px;
  width: 170px;
  height: 70px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 12px;
  border: 2px solid red;
  border: 1px solid rgba(255, 255, 255, 0.1);
  backdrop-filter: blur(20px);
}

.solid-color{
  width: 30px;
  height: 30px;
  background: #E6533C;
  border-radius: 50%;
}

.video-text h4{
  color: #fff;
  font-size: 1rem;
  font-weight: 900;
  margin-bottom: 10px;
}
.video-text p{
  color: #fff;
  font-size: 1rem;
  color: #EFEDE8A6;
}

.card2 {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 180px;
  right: 0;
  width: 180px;
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 12px;
  border: 1px solid rgba(255, 255, 255, 0.1);
  backdrop-filter: blur(20px);
}

.card2 h3{
  font-size: 1.5rem;
  color: #fff;
  font-weight: 900;
}

.card2 p{
  color: 1;
  color: #FFFFFFA6;
}

/* Habits section style */

.change-habit > h3 {
  text-align: center;
  color: #fff;
  font-size: 2.3rem;
  margin-bottom: 15px;
}
.change-habit > p {
  text-align: center;
  color: #FFFFFF80;
  font-size: 1rem;
  margin-bottom: 30px;
}

.image-flexbox{
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.flexbox-img{
  width: 232px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  gap: 30px;
}

.flexbox-img img{
  border-radius: 50%;
}

.flexbox-img h5{
  font-size: 1rem;
  color: #fff;
  margin-bottom: 10px;
}

.flexbox-img p{
  color: #FFFFFF80;
  font-size: 0.8rem;
}

/* Motive section style */
.motive-section{
  /* width: 1060px; */
  height: 371px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 30px;
  border-radius: 8px;
  background: rgb(34, 34, 34);
}

.motive-texts{
  width: 400px;
  height: 290px;
}

.motive-texts > h3{
  font-size: 3rem;
  color: #fff;
  margin-bottom: 20px;
}

.motive-texts > p{
  font-size: 0.9rem;
  color: #FFFFFF80;
  margin-bottom: 20px;
}

.motive-img img{
  width: 400px;
  height: 312px;
  border-radius: 8px;
}

.motive-btn{
  border: none;
  color: #fff;
  font-weight: 600;
  padding: 16px 40px;
}

/* Responsive for small devices */

@media screen and (max-width: 576px) {
  .nav-options{
    display: none;
  }
  #triple-bar{
    display: block;
    color: #fff;
  }
  #triple-bar i{
    font-size: 2rem;
  }
  h3 i{
    font-size: 2.5rem;
  }
  .title-container{
    flex-direction: column;
  }
  .text-title{
    font-size: 3.5rem;
  }
  .shape{
    font-size: 4rem;
  }
  .text-container{
    width: 100%;
    height: 100%;
  }
  .title-btn{
    padding: 5px 15px;
  }
  .title-btn2{
    padding: 5px 15px;
  }
  .card1{
    left: 0;
  }
  .card2{
    top: 199px;
    right: -1;
  }
  .change-habit > h3{
    font-size: 1.8rem;
  }
  .image-flexbox{
    flex-direction: column;
    gap: 50px;
  }
  .flexbox-img{
    border: 1px solid rgba(255, 255, 255, 0.1);
    padding: 26px 34px;
    border-radius: 8px;
  }
  .motive-section{
    flex-direction: column;
    width: 100%;
    height: 100%;
    padding: 30px 0;
  }
  .motive-texts>h3 {
    font-size: 2rem;
    width: 287px;
  }

  .motive-texts>p {
    font-size: 0.9rem;
    color: #FFFFFF80;
    margin-bottom: 20px;
  }
  .motive-btn{
    width: 100%;
  }
}


/* Responsive for medium devices */

@media screen and (min-width: 576px) and (max-width: 992px) {
  .nav-options {
    display: none;
  }

  #triple-bar {
    display: block;
    color: #fff;
  }

  #triple-bar i {
    font-size: 2rem;
  }

  h3 i {
    font-size: 3rem;
  }
  .title-container {
    flex-direction: column;
  }
  
  .text-title {
    font-size: 4rem;
  }
  
  .shape {
    font-size: 4rem;
  }
  .text-container {
    width: 500px;
    height: 100%;
  }
  .title-btn {
    padding: 5px 15px;
  }
  .title-btn2 {
    padding: 5px 15px;
  }
  .change-habit>h3 {
    font-size: 1.8rem;
  }
  .image-flexbox {
    flex-wrap: wrap;
    gap: 50px;
  }
  .motive-section {
    flex-direction: column;
    width: 100%;
    height: 100%;
    padding: 30px 0;
  }

}

